--- a/voice_password/templates/index.html
+++ b/voice_password/templates/index.html
@@ -1,23 +1,26 @@
-<html lang="en">
-<head>
+<!DOCTYPE html>
+<html>
+    <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Recorder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/index.css">
-    <!--  Scripts  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.6.1/d3.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="https://markjivko.com/dist/recorder.js"></script>
     
-
-</head>
-<body>
-    <h1>Audio</h1>
-
-    <button id="startRecordingButton">Start recording</button>
-    <button id="playButton">Play</button>
-
-    <div id="result">
-
+    </head>
+    <body>
+    
+    <div id="controls">
+        <button id="recordButton">Record</button>
     </div>
-</body>
-<script src="../static/js/audiorecorder.js"></script>
+
+        <div id="result">
+
+        </div>
+    <script src="../static/js/audiorecorder.js"></script>
+
+    </body>
+</html>
+
+
