--- a/voice_password/static/css/style.css
+++ b/voice_password/static/css/style.css
@@ -90,7 +90,7 @@ html::-webkit-scrollbar-thumb{
     grid-template-columns: 1fr 1fr 1.5fr;
     grid-template-rows: 1fr 1fr;
     grid-template-areas: "one two three"
-                         "one two four";
+                         ;
     gap:1.5rem;
 }
 
@@ -116,8 +116,12 @@ html::-webkit-scrollbar-thumb{
     grid-area: three;
 }
 
-#four{
-    grid-area: four;
+#plot{
+    margin-top: 15px;
+    max-height: 350px;
+}
+#plot-area{
+    margin-top: 40px;
 }
 
 .plan .box-container .box .title{
@@ -149,8 +153,79 @@ html::-webkit-scrollbar-thumb{
     text-transform: none;
     margin-top: 15px;
 }
+.mic-container {
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.mic-container .circle {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transition: 0.5s;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12), 0 3px 5px -1px rgba(0, 0, 0, .2);
+}
+
+.mic-container .circle i {
+    color: #b2b1b1;
+    font-size: 23px;
+    transition: 0.9s;
+}
+
+.mic-container .circle:before {
+    content: '';
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    opacity: 0.2;
+    z-index: -1;
+    position: absolute;
+}
+
+.mic-container .circle.active {
+    background: #f00;
+}
+
+.mic-container .circle.active:before {
+    background: gray;
+    animation: bounce 0.8s ease-in-out infinite 0.5s;
+}
+
+.mic-container .circle.active i {
+    color: #fff;
+}
+
+@keyframes bounce {
+    0% {
+        transform: scale(1);
+    }
+
+    25% {
+        transform: scale(1.4);
+    }
+
+    75% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(1.3);
+    }
+}
 
 
+
+
+#result{
+    text-align: center;
+}
 
 
 
