plotting new features

--- a/voice_password/templates/poster.html
+++ b/voice_password/templates/poster.html
@@ -71,7 +71,7 @@
             <p>
             
             <div id="plot-area">
-            <h3 class="title">Most recognized features in your voice</h3>
+            <h3 id='title' class="title"></h3>
             <div id="plot">
 
             </div>
